<?xml version="1.0"?>
<package format="2">
    <name>ce30_driver_ros</name>
    <version>0.0.0</version>
    <description>The ce30_driver_ros package</description>

    <maintainer email="martinappo@gmail.com">Martin Appo</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>ce30_driver</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_export_depend>ce30_driver</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <exec_depend>ce30_driver</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
